--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@ margin: 0;
 }
 
 body{width:100%; height: 100%; background: #ffffff;}
+  
+  .section01{margin: 5px;  height: 12px; width:80%; }
+.section01 img{ height: 12px; float: right;}
 
 .container{ 
 height: 150px; width:100%;}
@@ -42,8 +45,13 @@ p{padding: 10px; }
 </style>
 </head>
 <body>
+  
+ <section class="section01">
+  <img style="border: 0px solid; display: inline;" alt="contador de visitas" src="https://websmultimedia.com/contador-de-visitas.php?id=6591">
+ </section> 
+  
 <div class="container">
-<section id="section1"><img src="1.webp" width="120"  height="120">
+<section id="section1"><img src="1.webp" width="110"  height="110">
 </section>
 
 <section id="section2"><center><h2 id="titulo">Simulador de arma definitiva</h2></center>
