--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@ margin: 0;
 
 body{width:100%; height: 100%; background: #ffffff;}
   
-  .section01{margin: 5px;  height: 12px; width:80%; }
-.section01 img{ height: 12px; float: right;}
-
+ .section01{margin: 2px;  height: 12px; width:80%; }
+.section01 img{ height: 12px; float: right;} 
+  
 .container{ 
 height: 150px; width:100%;}
 
-#section1{
+#section1{text-align: center;
 width:44%; height: 150px; float: right; }
-#section1 img{border: 1px solid black; border-radius: 10px; padding: 5px; margin: 10px; }
+#section1 img{border:  1px solid black; border-radius: 10px;  text-align: center;}
 
+  
 #section2{
 width:55%; height: 100px;}
 #titulo{ padding: 15px; margin: 10px; text-align: center;}
@@ -32,13 +33,40 @@ width:55%; height: 49px; display: flex;}
 
 
 
-.nav{ width: 90%; height: 40px; margin: 10px; 10px; text-align: center;}
-.nav a{display: block; width: 80px; height: 18px; padding: 5px; background: #008000; border-radius: 10px; color: #ffffff;  text-decoration: none; float: right;}
+.nav{width:100%; height: 30px; text-align: center;}
 
+.nav a{display: block; text-decoration: none;
+    font-size: 16px; /* Tamaño de letra */
+    text-transform: uppercase; /* Letras en mayúscula */
+    background: #6B3618; /* Color de fondo */
+    padding: 10px 15px; /* Relleno */
+    margin: 10px;
+    color: #FFD059; /* Color de texto */
+    border-bottom: solid 2px #FFD059; /* Borde inferior */
+    border-radius: 10px; color: #ffffff;  }
 
+  #section03{
+width:100%; height: 49px; display: flex;}
+#section08{ width:10%;}
+  
+#section04{ width:50%; height: 49px; padding: 2px; 49px; float: right; margin: 10px; text-align: center;}
+
+#section05{width:50%; height: 49px; float: right; margin: 10px; text-align: center;}
+#section05 a{display: block; text-decoration: none;
+    font-size: 14px; /* Tamaño de letra */
+    text-transform: uppercase; /* Letras en mayúscula */
+    background: #6B3618; /* Color de fondo */
+    padding: 10px 15px; /* Relleno */
+    margin: 1px;
+    color: #FFD059; /* Color de texto */
+    border-bottom: solid 2px #FFD059; /* Borde inferior */
+    border-radius: 10px; color: #ffffff;  }
+
+  
 .main{   width:100%;  max-height: 220px;  display: flex; overflow-x: auto;}
-#section6 img{ border: 1px solid black; border-radius: 10px; height: 130px; width: 200px;  display: flex;}
+#section6 img{ border: 1px solid black; border-radius: 10px; height: 200px; width: 130px;  display: flex;}
 #section6{ margin: 5px; border-radius: 10px;  display: flex;}
+#section6 video{ border: 1px solid black; border-radius: 10px; height: 200px; width: 130px;  display: flex;}
 
 .footer{ width:90%; height: 100%; margin: 10px; }
 p{padding: 10px; }
@@ -69,7 +97,14 @@ p{padding: 10px; }
 <div class="nav"> 
 <a href="Simulador de arma definitiva_2.0.1_developer-shop.apk" download="Simulador de arma definitiva_2.0.1_developer-shop" ><center>Descargar</center></a>
 </div>
-
+<section id="section03">
+<div id="section08">
+</div>
+<div id="section04"><b>Calificación:</b><br>4.6<img src="19[1].png">
+</div>
+<div id="section05"><a href="comentarios.html" ><center>Comentarios</center></a> 
+</div>
+</section>
 <div class="main">
 
 <section id="section6">
