--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@ p{padding: 10px; }
  </section> 
   
 <div class="container">
-<section id="section1"><img src="1.webp" width="110"  height="110">
+<section id="section1"><img src="ti1.png" width="110"  height="110">
 </section>
 
-<section id="section2"><center><h2 id="titulo">Simulador de arma definitiva</h2></center>
+<section id="section2"><center><h2 id="titulo">Tiko Tiki</h2></center>
 </section>
 
 <section id="section3">
-<div id="section4">Versión<br>2.0.1
+<div id="section4">Versión<br>9.8(3)
 </div>
 <div id="linea"></div>
-<div id="section5">Tamaño<br>19.55MB
+<div id="section5">Tamaño<br>15.05MB
 </div>
 </section>
 </div>
@@ -108,22 +108,25 @@ p{padding: 10px; }
 <div class="main">
 
 <section id="section6">
-<img src="2.webp" >
+<img src="ti2.png" >
 </section>
 <section id="section6">
-<img src="3.webp">
+<img src="ti3jpg">
 </section>
 <section id="section6">
-<img src="4.webp"  >
+<img src="ti3.jpg"  >
 </section>
 <section id="section6">
-<img src="5.webp" >
-
+<img src="ti5.jpg" >
+</section>
+<section id="section6">
+<img src="ti6.jpg" >
+</section>
 </div>
 
 <div class="footer">
 <p>
-<h4>Descripción:</h4><br><p>Armas Ultimate. Contener las armas más poderosas en el mundo..</p>
+<h4>Descripción:</h4><br><p>En nuestra app podrás ver muchos videos 🥳</p>
 
 </div>
 </body>
