--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ p{padding: 10px; }
 </div>
 
 <div class="nav"> 
-<a href="Simulador de arma definitiva_2.0.1_developer-shop.apk" download="Simulador de arma definitiva_2.0.1_developer-shop" ><center>Descargar</center></a>
+<a href="tiko_tiki_developer-shop.apk" download="tiko tiki developer shop" ><center>Descargar</center></a>
 </div>
 <section id="section03">
 <div id="section08">
 </div>
-<div id="section04"><b>Calificación:</b><br>4.6<img src="19[1].png">
+<div id="section04"><b>Calificación:</b><br>4.4<img src="19[1].png">
 </div>
 <div id="section05"><a href="comentarios.html" ><center>Comentarios</center></a> 
 </div>
