--- a/index.html
+++ b/index.html
@@ -86,10 +86,10 @@ p{padding: 10px; }
 </section>
 
 <section id="section3">
-<div id="section4">Versión<br>9.8(3)
+<div id="section4">Versión<br><h5>9.8(3)</h5>
 </div>
 <div id="linea"></div>
-<div id="section5">Tamaño<br>15.05MB
+<div id="section5">Tamaño<br><h5>15.05 MB</h5>
 </div>
 </section>
 </div>
